--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<div class="container">
 		<h1>Shopping List</h1>
 		<div class="input">
-			<input id="userinput" type="text" placeholder="enter items">
-			<button id="enter">Enter</button>
+			<input id="userinput" type="text" placeholder="Enter items..">
+			<!-- <button id="enter">Enter</button> -->
 		</div>
 		<div class="shopping-list">
 			<div class="item">
